--- a/projects/phillies/seasons.json
+++ b/projects/phillies/seasons.json
@@ -1,4 +1,5 @@
 [
+    { "year": 2020, "wins": 17, "losses": 15 },
     { "year": 2019, "wins": 81, "losses": 81 },
     { "year": 2018, "wins": 80, "losses": 82 },
     { "year": 2017, "wins": 66, "losses": 96 },
